[package]
name = "radiator_spy"
version = "0.1.0"
authors = ["Stuart Roebuck"]
edition = "2018"

[dependencies]
assert2 = "0.1.2"
bitvec = "0.17.2"
byteorder = "1.3.4"
cc1101 = { git = "https://github.com/sroebuck/cc1101.git" }
colorful = "0.2.1"
itertools = "0.8.2"
pretty_assertions = "0.6.1"
rppal = { version = "0.11.3", features = ["hal"] }
